--- a/Code/AudioPlayersDemos/Android-Media-Player/app/src/main/res/values/strings.xml
+++ b/Code/AudioPlayersDemos/Android-Media-Player/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Player</string>
+    <string name="str_play">Play</string>
+    <string name="str_pause">Pause</string>
+    <string name="str_stop">Stop</string>
 </resources>
